--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   {{colorUpgInfo[(index+1) + "1"].text}}
                 </div>
                 <div v-if="(player.colorUpg[(index+1) + '1']||0) < colorUpgInfo[(index+1) + '1'].cap" class="color-upgrade-text">
-                  Cost: {{format(formula.cUpg[(index+1) + "1"](player.colorUpg[(index+1) + "1"]).cost)}} Red
+                  Cost: {{format(formula.cUpg[(index+1) + "1"](player.colorUpg[(index+1) + "1"]).cost)}} {{color.noun[index]}}
                 </div>
                 <div class="color-upgrade-text">
                   Production Time: {{format(formula.cUpg[(index+1) + "1"](player.colorUpg[(index+1) + "1"]).effect, 2)}}s
@@ -57,22 +57,22 @@
                 <div class="color-upgrade-text">
                   {{colorUpgInfo[(index+1) + "2"].text}}
                 </div>
-                <div v-if="(player.colorUpg[(index+1) + '1']||0) < colorUpgInfo[(index+1) + '1'].cap" class="color-upgrade-text">
-                  Cost: {{format(formula.cUpg[(index+1) + "2"](player.colorUpg[(index+1) + "2"]).cost)}} Red
+                <div v-if="(player.colorUpg[(index+1) + '2']||0) < colorUpgInfo[(index+1) + '2'].cap" class="color-upgrade-text">
+                  Cost: {{format(formula.cUpg[(index+1) + "2"](player.colorUpg[(index+1) + "2"]).cost)}} {{color.noun[index]}}
                 </div>
                 <div class="color-upgrade-text">
-                  Current Effect: x{{format(formula.cUpg[(index+1) + "2"](player.colorUpg[(index+1) + "2"]).effect, 2)}}
+                  Multiplier: x{{format(formula.cUpg[(index+1) + "2"](player.colorUpg[(index+1) + "2"]).effect, 2)}}
                 </div>
               </button>
               <button class="color-upgrade-button color-upgrade-button-3" @click="buyUpg((index + 1) + '3')">
                 <div class="color-upgrade-text">
                   {{colorUpgInfo[(index+1) + "3"].text}}
                 </div>
-                <div class="color-upgrade-text">
-                  Cost: placeholder
+                <div v-if="(player.colorUpg[(index+1) + '3']||0) < colorUpgInfo[(index+1) + '3'].cap" class="color-upgrade-text">
+                  Cost: {{format(formula.cUpg[(index+1) + "3"](player.colorUpg[(index+1) + "3"]).cost)}} {{color.noun[index]}}
                 </div>
                 <div class="color-upgrade-text">
-                  Current effect: placeholder
+                  Efficiency: placeholder
                 </div>
               </button>
             </div>
