Stats, date formatting

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         Achievements Placeholder
       </div>
       <div class="tab stats-tab" style="display: none">
-        <span>Total play time: </span>
+        <span>Total play time: {{formatDate(player.stats.playTime)}}</span>
       </div>
       <div class="tab settings-tab" style="display: none">
         Setting Placeholder
